# ThreeDimensions-v1.0.0

./: CMakeLists.txt  Manual.md  README.md  pyproject.toml
.github/workflows/: publish.yml
cpp_core/modifiers/: Modifier.h  ModifierStack.h  SymmetryModifier.cpp  SymmetryModifier.h
cpp_core/operations/: Bevel.cpp  Extrude.cpp  Extrude.h
cpp_core/topology/: Mesh.h  Vertex.h
python/threedimensions/: __init__.py  core.py  curves.py  mesh.py  modifiers.py  topology.py
