[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12"
]
build-backend = "scikit_build_core.build"

[project]
name = "threedimensions"
version = "1.0.1"
description = "Professional Hybrid 3D Modeling Engine (C++ Core + Python API)"
authors = [{ name = "LegedsDaD" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.scikit-build]
wheel.packages = ["threedimensions"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.package-dir]
"" = "python"
