[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12"
]
build-backend = "scikit_build_core.build"

[project]
name = "threedimensions"
version = "1.0.0"
description = "Professional Hybrid 3D Modeling Engine (C++ Core + Python API)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

authors = [
  { name = "LegedsDaD" }
]

[tool.scikit-build]
wheel.packages = ["python/threedimensions"]
